QRhiGles2: Skip GL cleanup on context loss

We are getting errors such as

  WebGL: INVALID_OPERATION: delete: object does not
  belong to this context

Normally, QRhiGles2::destroy() should delete/free all
GL resources. However if the GL context is lost then
there is not much we can do.

Task-number: QTBUG-120138
Change-Id: I6d00b10d72b7f7240499ceff0d002b88104009a0
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>
Reviewed-by: Piotr Wierciński <piotr.wiercinski@qt.io>